--- a/ch2/CMakeLists.txt
+++ b/ch2/CMakeLists.txt
@@ -4,3 +4,4 @@ cmake_minimum_required (VERSION 2.8 )
 project (HelloSLAM)
 
 add_executable( helloSLAM helloSLAM.cpp )
+add_library(hello libHelloSLAM.cpp)
