--- a/ch2/CMakeLists.txt
+++ b/ch2/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required (VERSION 2.8 )
 
 
 
-add_executable useHello useHello.cpp
+add_executable (useHello useHello.cpp)
 target_link_libraries( useHello hello_shared)
