--- a/ch5/imageBasics/CMakeLists.txt
+++ b/ch5/imageBasics/CMakeLists.txt
@@ -1,8 +1,8 @@
-set( CMAKE_CXX_FLAGS "-std=C++14")
+project(imageBasics)
 
-find_package( OpenCV REQUIRED)
-include_directories( $ {OpenCV_INCLUDE_DIRS})
+add_executable(imageBasics imageBasics.cpp)
+target_link_libraries(imageBasics ${OpenCV_LIBS})
 
-add_executable (imageBasics imageBasics.cpp)
+add_executable(undistortImage undistortImage.cpp)
+target_link_libraries(undistortImage ${OpenCV_LIBS})
 
-target_link_libraries(imageBasics $ {OpenCV_LIBS})
