opencv image undistort

--- a/ch5/imageBasics/CMakeLists.txt
+++ b/ch5/imageBasics/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(OpenCV REQUIRED)
 
 # 실행 파일 타겟 생성
 add_executable(imageBasics imageBasics.cpp)
-dd_executable(undistortImage undistortImage.cpp)
+add_executable(undistortImage undistortImage.cpp)
 # OpenCV 헤더 파일 경로를 타겟에 추가
 target_include_directories(imageBasics PUBLIC ${OpenCV_INCLUDE_DIRS})
 target_include_directories(undistortImagePUBLIC ${OpenCV_INCLUDE_DIRS})
